applications/vault.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
