applications/coredns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: coredns
---

apiVersion: v1
kind: Service
metadata:
  name: coredns-lb
  namespace: coredns
spec:
  type: LoadBalancer
  ports:
    - name: udp
      port: 53
      protocol: UDP
  selector:
    app.kubernetes.io/name: coredns
