applications/traefik.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.k8s.homelab`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
